Implemented connector framework
connector framework.

Choose S3 target
Chooose avro or json.